# RDFramework

./: .gitignore  CMakeLists.txt  displayimageswidget.h  displayimageswidget.ui  featureReduced_2.txt  features9.txt  main.cpp  manifest.json  rdfdialog.cpp  rdfdialog.h  rdfdialog.ui
Core/: DisplayGUI.cpp  DisplayGUI.h  DisplayGUI.ui  DisplayImagesWidgetGui.cpp  DisplayImagesWidgetGui.h  DisplayImagesWidgetGui.ui  MainWindowGui.cpp  MainWindowGui.h  MainWindowGui.ui  PreProcessGUI.cpp  PreProcessGUI.h  PreProcessGUI.ui  ResizeAllImagesDialogGui.cpp  ResizeAllImagesDialogGui.h  ResizeallImagesDialogGui.ui  cpuaffinityinterface.h  main.cpp  typedefs.h
forms/: AnnExtractorDialog.ui  DisplayImagesWidget.ui  HistogramDialog.ui  PFWidget.ui  ResizeallImagesDialog.ui  annextractordialog.ui  dialogextracted.ui  displayimageswidget.ui  mainwindow.ui  mydialog.ui  pfwidget.ui  rdfdialog.ui  resizeallimagesdialog.ui  vvglplayer.cpp  vvglplayer.h
include/: MNIST.h  PFExecutor.h  PageParser.h  Particle.h  PixelCloud.h  RDFParams.h  RandomDecisionForest.h  RandomDecisionTree.h  RandomDesicionForest.h  RandomDesicionTree.h  Reader.h  RectangleParticle.h  SimplePF.h  Target.h  TextRegionDetector.h  Util.h  VideoReader.h  annextractordialog.h  dialogextracted.h  displayimageswidget.h  histogramdialog.h  mainwindow.h  matcerealisation.hpp  mydialog.h  pfwidget.h  rdfdialog.h  resizeallimagesdialog.h  videoframegrabber.h  videoplayer.h  vvglplayer.h
include/gui/: AnnExtractorDialog.h  DisplayImagesWidget.h  MainWindow.h  PFWidget.h  pfwidget.h
include/rdf/: PixelCloud.h  RDFParams.h  RandomDecisionForest.h  RandomDecisionTree.h
include/tracking/: Target.h
include/tracking/particlefilter/: PFExecutor.h  Particle.h  ParticleFilter.h  RectangleParticle.h  SimplePF.h
include/util/: BufferQueue.h  MNIST.h  Reader.h  Util.h  VideoPlayer.h  VideoReader.h
modules/ocr/: AnnExtractorDialogGui.cpp  AnnExtractorDialogGui.h  AnnExtractorDialogGui.ui  ExtractedDialogGui.cpp  ExtractedDialogGui.h  ExtractedDialogGui.ui  HistogramDialogGui.cpp  HistogramDialogGui.h  HistogramDialogGui.ui  MyDialogGui.cpp  MyDialogGui.h  MyDialogGui.ui  PageParser.cpp  PageParser.h  Reader.cpp  Reader.h  ReaderMNIST.cpp  ReaderMNIST.h  TextRegionDetector.cpp  TextRegionDetector.h
modules/rdf/: DataSet.h  Node.h  PixelCloud.h  PreProcess.h  RDFBasic.cpp  RDFBasic.h  RDFParams.h  RDTBasic.cpp  RDTBasic.h  RDTBasic_kernel.cu  RandomDecisionForest.cpp  RandomDecisionForest.h  RandomDecisionForestDialogGui.cpp  RandomDecisionForestDialogGui.h  RandomDecisionForestDialogGui.ui  RandomDecisionTree.cpp  RandomDecisionTree.h  StatisticsLogger.cpp  StatisticsLogger.h  externalClass.cu
modules/tracking/dataExtraction/: BackgroundSubtractors.h  DataExtractor.cpp  DataExtractor.h  DataExtractorGui.cpp  DataExtractorGui.h  DataExtractorGui.ui  HOGExtactor.cpp  HOGExtactor.h  PredictorGUI.cpp  PredictorGUI.h  PredictorGUI.ui  PredictorGui.cpp  PredictorGui.h  PredictorGui.ui  dataExtractorGui.cpp  dataExtractorGui.h  detectorWrapper.h
modules/tracking/particlefilter/: DBSCAN.h  ImgProcessor.h  Particle.h  ParticleFilter.cpp  ParticleFilter.h  ParticleFilterWidgetGui.cpp  ParticleFilterWidgetGui.h  ParticleFilterWidgetGui.ui  RectangleParticle.h  Target.cpp  Target.h
modules/tracking/videoplayer/: VideoPlayer.cpp  VideoPlayer.h  VideoPlayerGui.cpp  VideoPlayerGui.h  VideoPlayerGui.ui  VideoProcess.h  VideoReader.cpp  VideoReader.h
qcustomplot/: qcustomplot.cpp
qcustomplot/examples/build-plot-example/: Makefile  moc_mainwindow.cpp  moc_qcustomplot.cpp  ui_mainwindow.h
qcustomplot/examples/plots/: mainwindow.cpp
src/: MNIST.cpp  PFExecutor.cpp  PageParser.cpp  RandomDecisionForest.cpp  RandomDecisionTree.cpp  RandomDesicionForest.cpp  Reader.cpp  SimplePF.cpp  Target.cpp  TextRegionDetector.cpp  Util.cpp  Util.cpp.autosave  VideoReader.cpp  annextractordialog.cpp  dialogextracted.cpp  displayimageswidget.cpp  histogramdialog.cpp  mainwindow.cpp  mydialog.cpp  pfwidget.cpp  rdfdialog.cpp  resizeallimagesdialog.cpp  videoframegrabber.cpp  videoplayer.cpp  vvglplayer.cpp
src/gui/: AnnExtractorDialog.cpp  DisplayImagesWidget.cpp  ExtractedDialog.cpp  HistogramDialog.cpp  MainWindow.cpp  MyDialog.cpp  PFWidget.cpp  RDFDialog.cpp  ResizeAllImagesDialog.cpp
src/ocr/: PageParser.cpp  TextRegionDetector.cpp
src/rdf/: RandomDecisionForest.cpp  RandomDecisionTree.cpp
src/tracking/: Target.cpp
src/tracking/particlefilter/: PFExecutor.cpp  ParticleFilter.cpp  SimplePF.cpp
src/util/: MNIST.cpp  Reader.cpp  Util.cpp  VideoPlayer.cpp  VideoReader.cpp  precompiled.h
util/: Blobs.cpp  Blobs.h  BufferQueue.h  CamCalibGUI.cpp  CamCalibGUI.h  CamCalibGUI.ui  Feature.cpp  Feature.h  IPMMapper.h  IntervalMap.cpp  MeanShift.cpp  Reader.cpp  Reader.h  ReaderGUI.cpp  ReaderGUI.h  ReaderGUI.ui  ReaderMNIST.cpp  ReaderMNIST.h  SignalSenderInterface.cpp  SignalSenderInterface.h  TestandGarbageCode.h  Util.cpp  Util.h  UtilDataModifier.h  precompiled.h  typedefs.h  utildatamodifier.h
